fix: Adjust dialog positioning and box model for better alignment

--- a/src/inbox_ai/web/static/css/style.css
+++ b/src/inbox_ai/web/static/css/style.css
@@ -1472,6 +1472,8 @@ a {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 .md3-dialog::backdrop {
@@ -1512,6 +1514,9 @@ a {
     .md3-dialog {
         width: calc(100vw - var(--md3-spacing-32));
         top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        margin: 0;
     }
 
     .md3-dialog__content {
